--- a/rapid_repos/templates/repos.txt.j2
+++ b/rapid_repos/templates/repos.txt.j2
@@ -1,3 +1,3 @@
 {% for repo in repos %}
-{{ repo.name }},https://{{ domain_name }}/{{ repo.name }},,
+{{ repo.name }},https://{{ repos_address_override|default(domain_name) }}/{{ repo.name }},,
 {% endfor %}
