Update to the new location of RapidTools

--- a/rapid_repos/templates/update-rapid-repo.sh.j2
+++ b/rapid_repos/templates/update-rapid-repo.sh.j2
@@ -14,5 +14,5 @@ git submodule update --recursive --remote --init
 git clean -xfdf
 git submodule foreach --recursive git clean -xfdf
 
-rapidtools-buildgit "$PWD" / modinfo.lua \
+rapid-buildgit "$PWD" / modinfo.lua \
   "{{ www_root }}/$REPO" $(git rev-parse HEAD) $REPO
